Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-37813

QTreeWidget asserts on drag start after moving/hiding columns

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P2: Important P2: Important
    • 4.8.7, 5.3.1
    • 5.2.1
    • Widgets: Itemviews
    • None
    • 85aef2dd4b059d2ba9cba4605d9fef87f3e2c4fc (stable, 7.5.2014, 5.3.1) 6d76e943dab0971d376cebb15fe531efc60622ac (4.8, 8.5.2014, 4.8.7)

      QTreeWidget asserts on drag start when a column is hidden and moved.
      Attach example reproduces the problem:
      Steps:
      Run the application and then hit Hide
      Then hit Move
      does not matter if it is moved first or hidden first.
      start draging top or any item, it asserts.
      ASSERT failure in QVector<T>::at: "index out of range"

        1. main.cpp
          2 kB
          Qt Support
        2. qtbug37813_stack.txt
          19 kB
          Friedemann Kleint
        3. qtbug37813.zip
          299 kB
          Friedemann Kleint
        4. qtbug37813_diag.patch
          3 kB
          Friedemann Kleint
        For Gerrit Dashboard: QTBUG-37813
        # Subject Branch Project Status CR V

            kleint Friedemann Kleint
            qtcomsupport Qt Support
            Votes:
            1 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes